Navigation Bar and Home Screen UI

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://demo.themesberg.com/bootstrap/spaces/css/spaces.css">
+ <!-- <link rel="stylesheet" href="https://demo.themesberg.com/bootstrap/spaces/css/spaces.css">-->
 
   <!-- Bootstrap Dashboard CSS-->
   <!-- <link rel="stylesheet" href="sb-kisan.css"> -->
@@ -21,7 +21,7 @@
   <!-- <link rel="stylesheet" href="sb-all.css"> -->
   <!-- Bootstrap third party CDN -->
   <!-- <link rel="stylesheet" href="https://startbootstrap.github.io/startbootstrap-sb-admin-2/css/sb-admin-2.min.css"> -->
-  <link rel="stylesheet" href="https://startbootstrap.github.io/startbootstrap-sb-admin-2/vendor/fontawesome-free/css/all.min.css">
+  <!--<link rel="stylesheet" href="https://startbootstrap.github.io/startbootstrap-sb-admin-2/vendor/fontawesome-free/css/all.min.css">-->
 
   <!-- Our Custom CSS -->
   <!-- <link rel="stylesheet" href="styles.css"> -->
